--- a/.pages.yml
+++ b/.pages.yml
@@ -15,6 +15,7 @@ content:
       - { name: excerpt, label: Excerpt, type: string }
       - { name: coverImage, label: Cover image, type: image }
       - { name: date, label: Date, type: date, options: { time: true, format: "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'" } }
+      - { name: embed, label: Embed, type: code, options: { language: html }}
       - name: ogImage
         label: Image (social sharing)
         type: object
