--- a/.pages.yml
+++ b/.pages.yml
@@ -16,3 +16,35 @@ content:
       - { name: date, label: Date, type: date, options: { time: true, format: "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'" } }
       - { name: embed, label: Embed, type: code, options: { language: html }}
       - { name: body, label: Body, type: rich-text }
+  - name: over-ons
+    label: Over ons
+    type: single
+    path: 10-over-ons.md
+  - name: repertoire
+    label: Repertoire
+    type: single
+    path: 20-repertoire.md
+  - name: fotos
+    label: Foto's
+    type: single
+    path: 30-fotos.md
+  - name: agenda
+    label: Agenda
+    type: single
+    path: 40-agenda.md
+  - name: contact
+    label: Contact
+    type: single
+    path: 50-contact.md
+  - name: config
+    label: Jekyll config
+    path: _config.yml
+    type: file
+    fields:
+      - name: title
+        label: Website title
+        type: string
+      - name: description
+        label: Website description
+        type: string
+        description: Will be provused for any page with no description.
