--- a/.pages.yml
+++ b/.pages.yml
@@ -9,11 +9,11 @@ content:
     type: collection
     path: _posts
     view:
-      fields: [ coverImage, title, date ]
+      fields: [ excerpt_image, title, date ]
     fields:
       - { name: layout, type: string, hidden: true, default: post }
       - { name: title, label: Title, type: string, required: true }
-      - { name: coverImage, label: Cover image, type: image }
+      - { name: excerpt_image, label: Cover image, type: image }
       - { name: date, label: Date, type: date, options: { time: true, format: "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'" } }
       - { name: body, label: Body, type: rich-text }
 
