--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@
 translate_langs: false
 
 title: "Brink Ruinen"
-#email: your-email@example.com
+email: your-email@domain.com
+author: Pages CMS User
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
