--- a/.pages.yml
+++ b/.pages.yml
@@ -13,8 +13,9 @@ content:
     fields:
       - { name: layout, type: string, hidden: true, default: post }
       - { name: title, label: Title, type: string, required: true }
-      - { name: excerpt_image, label: Cover image, type: image }
       - { name: date, label: Date, type: date, options: { time: true, format: "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'" } }
+      - { name: excerpt_image, label: Cover image, type: image }
+      - { name: gallery, label: Gallery, type: image, options: { multiple: true }}
       - { name: body, label: Body, type: rich-text }
 
   - name: agenda
@@ -26,6 +27,8 @@ content:
       - { hidden: [ header, navigator, related_posts ]}
       - { name: permalink, type: string, hidden: true, default: /agenda/ }
       - { name: title, label: Title, type: string, required: true }
+      - { name: excerpt_image, label: Cover image, type: image }
+      - { name: gallery, label: Gallery, type: image, options: { multiple: true }}
       - { name: body, label: Body, type: rich-text }
 
   - name: contact
@@ -37,6 +40,8 @@ content:
       - { hidden: [ header, navigator, related_posts ]}
       - { name: permalink, type: string, hidden: true, default: /contact/ }
       - { name: title, label: Title, type: string, required: true }
+      - { name: excerpt_image, label: Cover image, type: image }
+      - { name: gallery, label: Gallery, type: image, options: { multiple: true }}
       - { name: body, label: Body, type: rich-text }
 
   - name: fotos
@@ -48,6 +53,8 @@ content:
       - { hidden: [ header, navigator, related_posts ]}
       - { name: permalink, type: string, hidden: true, default: /fotos/ }
       - { name: title, label: Title, type: string, required: true }
+      - { name: excerpt_image, label: Cover image, type: image }
+      - { name: gallery, label: Gallery, type: image, options: { multiple: true }}
       - { name: body, label: Body, type: rich-text }
 
   - name: over-ons
@@ -59,6 +66,8 @@ content:
       - { hidden: [ header, navigator, related_posts ]}
       - { name: permalink, type: string, hidden: true, default: /over-ons/ }     
       - { name: title, label: Title, type: string, required: true }
+      - { name: excerpt_image, label: Cover image, type: image }
+      - { name: gallery, label: Gallery, type: image, options: { multiple: true }}
       - { name: body, label: Body, type: rich-text }
 
   - name: repertoire
@@ -70,6 +79,8 @@ content:
       - { hidden: [ header, navigator, related_posts ]}
       - { name: permalink, type: string, hidden: true, default: /repertoire/ }
       - { name: title, label: Title, type: string, required: true }
+      - { name: excerpt_image, label: Cover image, type: image }
+      - { name: gallery, label: Gallery, type: image, options: { multiple: true }}
       - { name: body, label: Body, type: rich-text }
 
   - name: config
