Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -95,6 +95,7 @@ content:
       - name: body,
         label: Body,
         type: object
+        list: true
         fields:
           - name: name
             label: Name
