Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -92,8 +92,8 @@ content:
       - { hidden: [ header, navigator ] }
       - { name: permalink, type: string, hidden: true, default: /test/ }
       - { name: title, label: Title, type: string, required: true }
-      - name: body,
-        label: Body,
+      - name: body
+        label: Body
         type: object
         list: true
         fields:
