--- a/.pages.yml
+++ b/.pages.yml
@@ -94,6 +94,7 @@ content:
       - name: body
         label: Body
         type: object
+        list: true
         fields:
           - name: name
             label: Name
