--- a/.pages.yml
+++ b/.pages.yml
@@ -91,8 +91,8 @@ content:
       - { name: layout, type: string, hidden: true, default: test }
       - { name: permalink, type: string, hidden: true, default: /test/ }
       - { name: title, label: Title, type: string, required: true }
-      - name: body
-        label: Body
+      - name: persons
+        label: Persons
         type: object
         list: true
         fields:
