--- a/.pages.yml
+++ b/.pages.yml
@@ -96,6 +96,9 @@ content:
         type: object
         list: true
         fields:
+          - name: photo
+            label: Photo
+            type: image
           - name: name
             label: Name
             type: string
