--- a/_config.yml
+++ b/_config.yml
@@ -1,51 +1,22 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+heading: "Brink"
+subheading: "Ruinen"
 
-# Disable translations
-translate_langs: false
+logo: "/public/assets/images/logo/logo-resize.png"
+favicon: "/public/assets/images/logo/favicon.ico"
+header: "/public/assets/images/header.jpg"
 
-title: "Brink Ruinen"
-email: your-email@domain.com
-author: Pages CMS User
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://t0mmie.github.io/jekyll-sandbox"
 
-# Header content
-heading: "Brink Ruinen"
-subheading: "Engelstalige folk muziekgroep uit Noord en oost Nederland"
-banner: /public/assets/images/banner.jpg
-favicon: /public/assets/images/logo.png
-
-# Header navigation links
-header_pages:
-  - over-ons.md
-  - repertoire.md
-  - fotos.md
-  - agenda.md
-  - contact.md
-
-# Build settings
-theme: jekyll-theme-yat
-plugins:
-  - jekyll-feed
+menu:
+  - title: "Home"
+    url: "/"
+  - title: "Over ons"
+    url: "/over-ons"
+  - title: "Repertoire"
+    url: "/repertoire"
+  - title: "Foto's"
+    url: "/fotos"
+  - title: "Agenda"
+    url: "/agenda"
+  - title: "Contact"
+    url: "/contact"
